<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/first_fragment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_fragment"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat_fact" />

    <Button
        android:id="@+id/third_to_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_first_fragment" />

    <Button
        android:id="@+id/third_to_first_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_first_fragment_with_api" />

</LinearLayout>