<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/first_fragment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment"
        android:textSize="24sp" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="458dp" />

    <Button
        android:id="@+id/second_to_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_third_fragment" />

    <Button
        android:id="@+id/second_to_third_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_third_fragment_with_api" />

</LinearLayout>