<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="284dp"
        app:srcCompat="@drawable/kitty" />

    <TextView
        android:id="@+id/first_fragment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment"
        android:textSize="24sp" />

    <Button
        android:id="@+id/first_to_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_second_fragment" />

    <Button
        android:id="@+id/first_to_second_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_second_fragment_with_api" />

</LinearLayout>